--- a/index.html
+++ b/index.html
@@ -29,18 +29,16 @@
 <body>
 
   <div class="container">
-    <img class= 'backrgound top' src="./images/bg-pattern-top.svg" alt="top bg-pattern-top">
-    <img class= 'backrgound bottom' src="./images/bg-pattern-bottom.svg" alt="top bg-pattern-bottom">
+    <img class='backrgound top' src="./images/bg-pattern-top.svg" alt="top bg-pattern-top">
+    <img class='backrgound bottom' src="./images/bg-pattern-bottom.svg" alt="top bg-pattern-bottom">
     <div class="card">
-      <img src="./images/bg-pattern-card.svg" alt="">
+      <img class="card--Background" src="./images/bg-pattern-card.svg" alt="">
       <div class="picture">
         <img src="./images/image-victor.jpg" alt="profile picture">
       </div>
       <div class="center-box">
         <div class="name">
           <h1>Victor Crest</h1>
-        </div>
-        <div class="age">
           <p>26</p>
         </div>
         <div class="location">
@@ -56,7 +54,7 @@
           <h1>803K</h1>
           <p>likes</p>
         </div>
-        <div class="Photos">
+        <div class="photos">
           <h1>1.4K</h1>
           <p>Photos</p>
         </div>
@@ -69,6 +67,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Moreno-dev</a>.
   </div>
+
 </body>
 
 </html>
