--- a/index.html
+++ b/index.html
@@ -31,36 +31,125 @@
   <div class="container">
     <img class='backrgound top' src="./images/bg-pattern-top.svg" alt="top bg-pattern-top">
     <img class='backrgound bottom' src="./images/bg-pattern-bottom.svg" alt="top bg-pattern-bottom">
-    <div class="card">
-      <img class="card--Background" src="./images/bg-pattern-card.svg" alt="">
-      <div class="picture">
-        <img src="./images/image-victor.jpg" alt="profile picture">
-      </div>
-      <div class="center-box">
-        <div class="name">
-          <h1>Victor Crest</h1>
-          <p>26</p>
+    <div class="cards">
+      <div class="card">
+        <img class="card--Background" src="./images/bg-pattern-card.svg" alt="">
+          <div class="picture">
+            <img src="./images/image-victor.jpg" alt="profile picture">
+          </div>
+          <div class="center-box">
+            <div class="name">
+              <h1>Victor Crest</h1>
+              <p>26</p>
+            </div>
+            <div class="location">
+              <p>London</p>
+            </div>
+          </div>
+          <div class="bottom-box">
+            <div class="followers">
+              <h1>80K</h1>
+              <p>Followers</p>
+            </div>
+            <div class="likes">
+              <h1>803K</h1>
+              <p>likes</p>
+            </div>
+            <div class="photos">
+              <h1>1.4K</h1>
+              <p>Photos</p>
+            </div>
+          </div>
         </div>
-        <div class="location">
-          <p>London</p>
+        <div class="card">
+          <img class="card--Background" src="./images/bg-pattern-card.svg" alt="">
+            <div class="picture">
+              <img src="./images/image-victor.jpg" alt="profile picture">
+            </div>
+            <div class="center-box">
+              <div class="name">
+                <h1>Victor Crest</h1>
+                <p>26</p>
+              </div>
+              <div class="location">
+                <p>London</p>
+              </div>
+            </div>
+            <div class="bottom-box">
+              <div class="followers">
+                <h1>80K</h1>
+                <p>Followers</p>
+              </div>
+              <div class="likes">
+                <h1>803K</h1>
+                <p>likes</p>
+              </div>
+              <div class="photos">
+                <h1>1.4K</h1>
+                <p>Photos</p>
+              </div>
+            </div>
         </div>
-      </div>
-      <div class="bottom-box">
-        <div class="followers">
-          <h1>80K</h1>
-          <p>Followers</p>
+        <div class="card">
+          <img class="card--Background" src="./images/bg-pattern-card.svg" alt="">
+            <div class="picture">
+              <img src="./images/image-victor.jpg" alt="profile picture">
+            </div>
+            <div class="center-box">
+              <div class="name">
+                <h1>Victor Crest</h1>
+                <p>26</p>
+              </div>
+              <div class="location">
+                <p>London</p>
+              </div>
+            </div>
+            <div class="bottom-box">
+              <div class="followers">
+                <h1>80K</h1>
+                <p>Followers</p>
+              </div>
+              <div class="likes">
+                <h1>803K</h1>
+                <p>likes</p>
+              </div>
+              <div class="photos">
+                <h1>1.4K</h1>
+                <p>Photos</p>
+              </div>
+            </div>
         </div>
-        <div class="likes">
-          <h1>803K</h1>
-          <p>likes</p>
+        <div class="card">
+          <img class="card--Background" src="./images/bg-pattern-card.svg" alt="">
+            <div class="picture">
+              <img src="./images/image-victor.jpg" alt="profile picture">
+            </div>
+            <div class="center-box">
+              <div class="name">
+                <h1>Victor Crest</h1>
+                <p>26</p>
+              </div>
+              <div class="location">
+                <p>London</p>
+              </div>
+            </div>
+            <div class="bottom-box">
+              <div class="followers">
+                <h1>80K</h1>
+                <p>Followers</p>
+              </div>
+              <div class="likes">
+                <h1>803K</h1>
+                <p>likes</p>
+              </div>
+              <div class="photos">
+                <h1>1.4K</h1>
+                <p>Photos</p>
+              </div>
+            </div>
         </div>
-        <div class="photos">
-          <h1>1.4K</h1>
-          <p>Photos</p>
-        </div>
-      </div>
-
     </div>
+
   </div>
 
   <div class="attribution">
